--- a/index.html
+++ b/index.html
@@ -27,12 +27,23 @@
     <br>
 
     <label>Password</label>
-    <input type="number">
+    <input type="password">
     <br>
 
 
     <br>
     <input type="submit">
+    <br>
+
+
+    <br>
+    <label>Yes</label>
+    <input type="checkbox">
+    <br>
+
+    <label>No</label>
+    <input type="checkbox">
+    
 
 
 </form>
